# conductor

./: .gitignore  README.md
agent/: pyproject.toml  smoke_agent.py
agent/conductor_operator/: agent.py
backend/: Dockerfile  package-lock.json  package.json  seed.js  smoke-auth.js
backend/src/: server.js
backend/src/lib/: actions.js  analyzer.js  bigquery.js  config.js  events.js  fivetran.js  notifications.js  portfolio.js  slack.js
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/activity/: page.tsx
frontend/src/app/api/ops/run-mission/: route.ts
frontend/src/app/api/ops/trigger-analysis/: route.ts
frontend/src/app/api/ops/trigger-sync/[id]/: route.ts
frontend/src/app/approvals/: page.tsx
frontend/src/app/components/: agent-trace.tsx  app-shell.tsx  approvals-client.tsx  conductor-logo.tsx  governance-mode-toggle.tsx  live-mission-feed.tsx  live-refresh.tsx  notification-toasts.tsx  ops-ui.tsx  policy-editor.tsx  revert-action-button.tsx  run-audit-button.tsx  run-mission-button.tsx  trigger-sync-button.tsx
frontend/src/app/connectors/: page.tsx
frontend/src/app/connectors/[id]/: loading.tsx  page.tsx
frontend/src/app/onboarding/: page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/app/spend/: page.tsx
frontend/src/app/style-preview/: page.tsx
frontend/src/lib/: api.ts
